--- a/GitHubClient/app/build.gradle
+++ b/GitHubClient/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -41,4 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // di
+    implementation 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
+    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
 }
