--- a/GitHubClient/app/build.gradle
+++ b/GitHubClient/app/build.gradle
@@ -47,4 +47,9 @@ dependencies {
     // di
     implementation 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
+
+    // Moxy
+    implementation "com.github.moxy-community:moxy:2.2.0"
+    implementation "com.github.moxy-community:moxy-androidx:2.2.0"
+    kapt "com.github.moxy-community:moxy-compiler:2.2.0"
 }
