--- a/GitHubClient/app/build.gradle
+++ b/GitHubClient/app/build.gradle
@@ -58,4 +58,11 @@ dependencies {
     implementation "com.github.moxy-community:moxy:2.2.0"
     implementation "com.github.moxy-community:moxy-androidx:2.2.0"
     kapt "com.github.moxy-community:moxy-compiler:2.2.0"
+
+    // Retrofit
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
