--- a/GitHubClient/app/build.gradle
+++ b/GitHubClient/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    // Cicerone (Navigation pattern)
+    implementation("com.github.terrakok:cicerone:7.0")
 }
