--- a/GitHubClient/app/googleAuth/build.gradle
+++ b/GitHubClient/app/googleAuth/build.gradle
@@ -44,8 +44,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     // di
-    implementation 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
-    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
+    implementation deps.toothpick
+    kapt deps.kaptToothpick
 
     implementation project(':app:domain')
 }
