--- a/GitHubClient/app/build.gradle
+++ b/GitHubClient/app/build.gradle
@@ -50,11 +50,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation deps.rxjava2
 
     // di
-    implementation 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
-    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
+    implementation deps.toothpick
+    kapt deps.kaptToothpick
 
     // Moxy
     implementation "com.github.moxy-community:moxy:2.2.0"
