--- a/GitHubClient/app/gitHubService/build.gradle
+++ b/GitHubClient/app/gitHubService/build.gradle
@@ -49,15 +49,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // di
-    implementation 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
-    kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
+    implementation deps.toothpick
+    kapt deps.kaptToothpick
 
     // Retrofit
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation deps.rxjava2
 
     implementation project(':app:domain')
 }
