--- a/GitHubClient/versions.gradle
+++ b/GitHubClient/versions.gradle
@@ -24,7 +24,7 @@ deps.rxjava2 = 'io.reactivex.rxjava2:rxandroid:2.0.1'
 deps.toothpick = 'com.github.stephanenicolas.toothpick:ktp:3.0.0'
 deps.kaptToothpick ='com.github.stephanenicolas.toothpick:toothpick-compiler:3.0.0'
 
-// Закинуть зависсимости сюда
+// Закинуть зависимости сюда
 
 ext.deps = deps
 
